kubernetes/apps/artemis-cluster/pterodactyl/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl
spec:
  selector:
    app: pterodactyl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
