kubernetes/apps/artemis-cluster/pterodactyl/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "${APP}-internal"
  namespace: ${NAMESPACE:default}
spec:
  hostnames:
    - "${SUBDOMAIN}.dcunha.io"
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${APP}
          kind: Service
          namespace: ${NAMESPACE:default}
          port: ${ACCESS_PORT}
